HaloMythic3dot5.css
input.sheet-background_switch_1:checked ~ div.sheet-background { background: white }
input.sheet-background_switch_2:checked ~ div.sheet-background { background-image: linear-gradient(#7e8c36, #4b5320); color: white }
input.sheet-background_switch_3:checked ~ div.sheet-background { background-image: linear-gradient(#bd7fbf, #b84c6f); color: black }
input.sheet-background_switch_4:checked ~ div.sheet-background { background-image: linear-gradient(#ff9100, #e69500) }
input.sheet-background_switch_5:checked ~ div.sheet-background { background: white }

/*
METHODS OF MY MADNESS
Keep select parameters on separate lines to better track what is being selected
Enter in CSS properties as following Format: {
text-align: center;
text-decoration: underline
}
no ending semicolons needed, properly space out properties line-by-line.  Alphabetized each properties list for easier reading.
2. Keep order in HTML elements' attributes by the way they're listed.  name type value class
*/
.sheet-background_radius{
	border: 1px solid black;
	border-radius: 11px;
}

.charsheet .sheet-row {
	height: 24px;
	margin: 2px 0px 2px
}
.charsheet .sheet-item {
	display: inline-block;
	height: 28px;
	margin: 0 -2px;
	padding: 3px 2px;
	text-align: left;
	vertical-align: middle;
	width: 100%
}
.charsheet .sheet-item.sheet-5 { width: 5px }
.charsheet .sheet-item.sheet-70 { width: 70px }
.charsheet .sheet-item.sheet-920 { width: 90px }
.sheet-full_width_17px{width: calc(100% - 17px);}

.sheet-collapsible_ability_description_window_a,
.sheet-collapsible_ability_block_switch:checked ~ .sheet-collapsible_ability_description_window_b { display: block }
.sheet-collapsible_ability_description_window_b,
.sheet-collapsible_ability_block_switch:checked ~ .sheet-collapsible_ability_description_window_a { display: none }

.sheet-input_background{
	background: transparent;
	color: white;
	border-color: transparent;
	font-size: 16px;
	width: 35px;
	margin-left: -7px;
	margin-top: -3px;
	text-align: center;
	cursor: pointer;
}
.sheet-input_c_background{
	width: 50px;
	font-size: 16px;
	margin-top: -7px!important;
	margin-bottom: -4px!important;
	cursor: pointer;

}
/* ______________________________ start of CSS selectors, patterns used to select element(s) for styling ______________________________ */

@import url('https://fonts.googleapis.com/css?family=Saira+Semi+Condensed&display=swap');

/* All input elements that are of type number or type text */
select,
input[type='number'],
input[type='text'],
button[type='action'] {
	background: #394C6A;
	color: white;
	font-family: Saira Semi Condensed;
	text-align: center
}

/* All horizontal rule elements receive the following CSS property. */
hr { border-top: 1px dotted black }

/* All button elements of type roll */
button[type='roll'] {
	background: black;
	color: white;
	font-family: Saira Semi Condensed
}
/* clear buttons with the clear class */
button[type="roll"].sheet-clear::before {
	content: "";
	display: none;
}

/* All button elements of type roll when hovered over: */
button[type='roll']:hover { background-color: red;}
label:hover { cursor: pointer;}


/* Both header elements 2 and 3 receive the following CSS properties. */
h2, h3 {
	font-family: Saira Semi Condensed;
	text-align: center;
	text-decoration: underline
}
/* Only type-2 headers receive the following CSS properties. */
h2{
	color: white;
}
/* Only type-3 headers receive the following CSS properties. */
h3 {
	background: #394C6A;
	color: white;
}

/* All instances of the placeholder attribute across all elements */
::placeholder {
	color: white;
	opacity: 0.7
}

/* All textarea elements (keep width for textarea to prevent stretching off of sheet) */
textarea {
	background: #394C6A;
	color: white;
	font-family: Saira Semi Condensed;
	resize: vertical;
	width: calc(100% - 10px)
}

/* ______________________________ end of CSS selectors ______________________________
______________________________ start of multipurpose or special-use classes such as grey border box on Core and Settings tabs ______________________________ */

.sheet-hidden { display: none }
.sheet-hider:not(:checked) + div { display: none }
.sheet-hider:not(:checked) + input { display: none }
.sheet-hidernot:checked + div { display: none }
.sheet-hidernot:checked + input { display: none }

.sheet-box {
	background: #404040;
	border-style: solid;
	border-width: 1px;
	border-color: black;
	color: white;
}

.sheet-edge_padding { padding: 2px }
/* half width of containing block */
.sheet-half_width { width: 50% }
/* full width of containing block */
.sheet-full_width { width: 100% }
/* full height of containing block */
.sheet-full_height{height: 100% }

.sheet-white_text { color: white }
.sheet-huge_text { font-size: 36px }
.sheet-bold_text { font-weight: bold }
.sheet-centered { margin: auto }
.sheet-text_centered{text-align: center;}
.sheet-radius_border{border-radius: 10px;
}
.sheet-radius_border_top{
	border-top-left-radius: 10px;
	border-top-right-radius: 10px;
}
.sheet-radius_border_bottom{
	border-bottom-left-radius: 10px;
	border-bottom-right-radius: 10px;
}
.sheet-radius_border_heading{
	border-top-left-radius: 9px;
	border-top-right-radius: 9px;
}

/* ______________________________ end of special-use classes ______________________________
______________________________ start of grid structure for character information ______________________________ */


.sheet-gs1 { grid-area: ah1;		margin-top: 2px;  font-size: 18px;  padding-left: 5px }
.sheet-gs2 { grid-area: ah2;		margin-top: 2px;  font-size: 18px;  padding-left: 5px }
.sheet-gs3 { grid-area: ah3;		margin-top: 2px;  font-size: 18px;  padding-left: 5px }
.sheet-gs4 { grid-area: ah4;		margin-top: 2px;  font-size: 18px;  padding-left: 5px }
.sheet-gs5 { grid-area: ah5;		margin-top: 2px;  font-size: 18px;  padding-left: 5px }
.sheet-gs6 { grid-area: ah6;		margin-top: 2px;  font-size: 18px;  padding-left: 5px }
.sheet-gs7 { grid-area: ah7;	  width: calc(100%); }
/* ... */

